tests/fixtures/invalid/pow_float_int_bytes.py
# Cannot call pow() with Float, Int, Bytes
x = pow(1.0, 1, b"hello")
